JumpScript/tests/baselines/reference/parserIndexSignature1.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature1.jump(2,4): error TS1017: An index signature cannot have a rest parameter.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature1.jump (1 errors) ====
    interface I {
      [...a]
       ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
    }